WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192136
A sender created through addTransceiver and populated using addTrack should have its source set
https://bugs.webkit.org/show_bug.cgi?id=192136
Summary
A sender created through addTransceiver and populated using addTrack should h...
youenn fablet
Reported
2018-11-28 21:35:22 PST
A sender create through addTransceiver and populated using addTrack should have its source set
Attachments
Patch
(5.04 KB, patch)
2018-11-28 21:58 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.00 KB, patch)
2018-11-29 11:15 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.99 KB, patch)
2018-12-03 21:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-11-28 21:58:20 PST
Created
attachment 355978
[details]
Patch
Eric Carlson
Comment 2
2018-11-29 10:22:18 PST
Comment on
attachment 355978
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=355978&action=review
> Source/WebCore/ChangeLog:3 > + A sender create through addTransceiver and populated using addTrack should have its source set
Nit: s/create/created/
youenn fablet
Comment 3
2018-11-29 11:15:38 PST
Created
attachment 356025
[details]
Patch for landing
youenn fablet
Comment 4
2018-11-29 11:15:51 PST
(In reply to Eric Carlson from
comment #2
)
> Comment on
attachment 355978
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=355978&action=review
> > > Source/WebCore/ChangeLog:3 > > + A sender create through addTransceiver and populated using addTrack should have its source set > > Nit: s/create/created/
Fixed
WebKit Commit Bot
Comment 5
2018-11-29 11:54:49 PST
Comment on
attachment 356025
[details]
Patch for landing Clearing flags on attachment: 356025 Committed
r238680
: <
https://trac.webkit.org/changeset/238680
>
WebKit Commit Bot
Comment 6
2018-11-29 11:54:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-29 11:55:36 PST
<
rdar://problem/46349472
>
Ryan Haddad
Comment 8
2018-11-29 17:13:35 PST
(In reply to WebKit Commit Bot from
comment #5
)
> Committed
r238680
: <
https://trac.webkit.org/changeset/238680
>
This change has caused layout tests imported/w3c/web-platform-tests/webrtc/RTCRtpTransceiver.https.html and webrtc/remove-track.html to consistently fail an assertion on macOS and iOS WK2: ASSERTION FAILED: !hasSource() /Volumes/Data/slave/sierra-debug/build/Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCRtpSenderBackend.h(92) : void WebCore::LibWebRTCRtpSenderBackend::setSource(Source &&) 1 0x11b22c709 WTFCrash 2 0x10a0df85b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10a2854d4 WebCore::LibWebRTCRtpSenderBackend::setSource(WTF::Variant<std::nullptr_t, WTF::Ref<WebCore::RealtimeOutgoingAudioSource, WTF::DumbPtrTraits<WebCore::RealtimeOutgoingAudioSource> >, WTF::Ref<WebCore::RealtimeOutgoingVideoSource, WTF::DumbPtrTraits<WebCore::RealtimeOutgoingVideoSource> > >&&) 4 0x10a2b6e40 WebCore::LibWebRTCRtpSenderBackend::takeSource(WebCore::LibWebRTCRtpSenderBackend&) 5 0x10a2b4efc WebCore::LibWebRTCPeerConnectionBackend::addTrack(WebCore::MediaStreamTrack&, WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul>&&) 6 0x10b9e9b91 WebCore::RTCPeerConnection::addTrack(WTF::Ref<WebCore::MediaStreamTrack, WTF::DumbPtrTraits<WebCore::MediaStreamTrack> >&&, WTF::Vector<std::__1::reference_wrapper<WebCore::MediaStream>, 0ul, WTF::CrashOnOverflow, 16ul> const&) 7 0x10afadc0b WebCore::jsRTCPeerConnectionPrototypeFunctionAddTrackBody(JSC::ExecState*, WebCore::JSRTCPeerConnection*, JSC::ThrowScope&) 8 0x10afa04d0 long long WebCore::IDLOperation<WebCore::JSRTCPeerConnection>::call<&(WebCore::jsRTCPeerConnectionPrototypeFunctionAddTrackBody(JSC::ExecState*, WebCore::JSRTCPeerConnection*, JSC::ThrowScope&)), (WebCore::CastedThisErrorBehavior)0>(JSC::ExecState&, char const*) 9 0x10afa01bc WebCore::jsRTCPeerConnectionPrototypeFunctionAddTrack(JSC::ExecState*) 10 0x7f82b2ac177 11 0x11b6e95b4 llint_entry
Ryan Haddad
Comment 9
2018-11-29 17:32:23 PST
Reverted
r238680
for reason: Caused existing webrtc layout tests to fail an assertion. Committed
r238720
: <
https://trac.webkit.org/changeset/238720
>
youenn fablet
Comment 10
2018-12-03 21:47:30 PST
Created
attachment 356463
[details]
Patch
youenn fablet
Comment 11
2018-12-03 21:54:18 PST
(In reply to youenn fablet from
comment #10
)
> Created
attachment 356463
[details]
> Patch
Debug ASSERT was not correct when removing and readding a track. I now explicitly clear the source to keep the assert.
WebKit Commit Bot
Comment 12
2018-12-03 22:22:28 PST
Comment on
attachment 356463
[details]
Patch Clearing flags on attachment: 356463 Committed
r238845
: <
https://trac.webkit.org/changeset/238845
>
WebKit Commit Bot
Comment 13
2018-12-03 22:22:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug